updated code - display guesses

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 	<div class="content">
 		<div class="container">
 			<h1>Chicago Neighborhood Hangman</h1>
-			<div id="Help Message">Type a character to play the game</div>
+			<div id="Help Message">Start typing to play the game</div>
 			<div id="current-word">_ _ _ _ _</div>
-			<div id="current-guesses"><p>Current guesses: a, c, f, g, i</p></div>
+			<div id="current-guesses"><p>Current guesses: <span class="guesses"></span></p></div>
 			<div id="number-guesses"><p>6 guesses out of 10</p></div>
 			<a href="" id="resetGame">Start Over</a>
 		</div>
